# Meeting-Summary-Agent

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  dependencies.py  main.py
backend/app/ai/: __init__.py  base.py  chunker.py  factory.py
backend/app/ai/agents/: action_extractor.py  summarizer.py  topic_analyzer.py
backend/app/ai/prompts/: action_extractor.py  summarizer.py  topic_analyzer.py
backend/app/ai/providers/: anthropic_provider.py  gemini_provider.py  mistral_provider.py  openai_compatible_provider.py  openai_provider.py  qwen_provider.py
backend/app/api/: deps.py
backend/app/api/v1/: action_items.py  analytics.py  (+15 more)
backend/app/audio/: processor.py  transcriber.py
backend/app/core/: exceptions.py  security.py
backend/app/db/: base.py  seed.py  session.py
backend/app/models/: __init__.py  action_item.py  comment.py  meeting.py  share.py  summary.py  tag.py  template.py  transcript.py  user.py
backend/app/schemas/: action_item.py  analytics.py  comment.py  meeting.py  search.py  summary.py  template.py  transcript.py  user.py
backend/app/services/: action_item_service.py  analytics_service.py  auth_service.py  comment_service.py  export_service.py  meeting_service.py  search_service.py  summary_service.py  template_service.py  transcript_service.py
backend/app/tasks/: celery_app.py  summary_tasks.py  transcription_tasks.py
backend/app/teams/: __init__.py  bot.py  connector.py  models.py
(+66 files in other folders)
